# MediaPlayer

./: '  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MediaPlayer  appMediaPlayer_qml_module_dir_map.qrc  appMediaPlayerplugin_MediaPlayerPlugin.cpp  appmediaplayer_qmltyperegistrations.cpp  cconfig.json  cmake_install.cmake  config.json  fixed.cpp  qmldir
.qt/: MediaPlayer_qml.cmake  MediaPlayer_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake  appMediaPlayer_qml.cmake  appMediaPlayer_res.cmake
.qt/deploy_qml_imports/: MediaPlayer.cmake
.qt/qml_imports/: MediaPlayer_build.rsp  MediaPlayer_conf.cmake  MediaPlayer_conf.rsp
.qt/rcc/: MediaPlayer_raw_qml_0.qrc  MediaPlayer_raw_qml_0_extra_qmldirs.qrc  qmake_MediaPlayer.qrc  qmake_app.qrc  qrc_MediaPlayer_raw_qml_0.cpp  qrc_MediaPlayer_raw_qml_0_extra_qmldirs.cpp  qrc_appMediaPlayer_raw_qml_0.cpp  qrc_qmake_MediaPlayer.cpp  qrc_qmake_app.cpp
.rcc/qmllint/: MediaPlayer.rsp  (+5 more)
MediaPlayer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
app/: MediaPlayer_qml_module_dir_map.qrc  qmldir
appMediaPlayer_autogen/: deps  moc_predefs.h
appMediaPlayerplugin_autogen/: deps  moc_predefs.h
meta_types/: MediaPlayer_json_file_list.txt  MediaPlayer_json_file_list.txt.timestamp  qt6mediaplayer_metatypes.json
qml/: Main.qml  TrackComponent.qml
qmltypes/: MediaPlayer_foreign_types.txt
src/: Config.cpp  Config.h  MediaPlayer.cpp  MediaPlayer.h  TrackImageProvider.cpp  TrackImageProvider.h  TrackInfo.cpp  TrackInfo.h  TrackModel.cpp  TrackModel.h  main.cpp  mainwindow.cpp  mainwindow.h
(+64 files in other folders)
